# mlb-today

./: .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml
src/mlb_today/: config.py  logger.py
src/mlb_today/blueprints/: bp_batting.py  bp_email.py  bp_pitching.py  bp_probables.py  bp_schedule.py
src/mlb_today/services/: app_setting_service.py  email_service.py  fangraphs_service.py  mlbdotcom_service.py  probables_service.py  schedule_service.py  storage_service.py
src/mlb_today/templates/: email.jinja2
