[project]
name = "mlb-today"
requires-python = ">=3.11"
dependencies = [
    "azure-functions (>=1.23.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "azure-identity (>=1.23.0,<2.0.0)",
    "azure-mgmt-web (>=9.0.0,<10.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
